Issue #2411533 by Zarabadoo: Fixed wrapping link text in unibar options.

--- a/css/navbar/navbar-overlay-child.css
+++ b/css/navbar/navbar-overlay-child.css
@@ -15,8 +15,6 @@
 }
 
 #overlay {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   display: block;
   margin: 0 auto;
