--- a/src/css/_acquia_lift.navbar.styles.scss
+++ b/src/css/_acquia_lift.navbar.styles.scss
@@ -43,6 +43,9 @@
     .acquia-lift-campaign {
       font-weight: bold;
     }
+    &.acquia-lift-menu-link {
+      font-weight: normal;
+    }
   }
   .acquia-lift-campaigns .navbar-box {
     display: inline-block;
@@ -167,26 +170,26 @@
         text-align: right;
       }
       .acquia-lift-campaign {
-        margin-right: -4em;
-        padding-right: 4em;
+        margin-right: -4.2em;
+        padding-right: 4.2em;
       }
       .acquia-lift-campaign-edit {
-        width: 4em;
+        width: 4.2em;
       }
       .acquia-lift-preview-option {
-        margin-right: -10em;
-        padding-right: 10em;
+        margin-right: -9em;
+        padding-right: 9em;
       }
       .acquia-lift-variation-edit {
         width: 2.3em;
       }
       .acquia-lift-variation-delete,
       .acquia-lift-goal-delete {
-        width: 3.5em;
+        width: 4em;
       }
       .acquia-lift-variation-rename,
       .acquia-lift-goal-rename {
-        width: 4.1em;
+        width: 4.6em;
       }
     }
   }
